--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.46.2",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
     "vite-plugin-svgr": "^4.0.0"
   },
   "devDependencies": {
